--- a/index.html
+++ b/index.html
@@ -7,11 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
-        <div>
-            
-        </div>
-    </div>
+    <h1>Hello</h1>
     
 </body>
 </html>
